feat: created the remaining auth handlers, middlewares for basic and bearer auth, and added a expvars for debug/vars
