# cmd/api/auth.go
@@ -1,24 +1,90 @@
 package main
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/puremike/event-mgt-api/internal/storage"
 	"golang.org/x/crypto/bcrypt"
 )
 
-type RegisterUserRequest struct {
+type registerUserRequest struct {
 	Name     string `json:"name" binding:"required,min=3"`
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required,min=8"`
 }
 
-type UserResponse struct {
+type userResponse struct {
 	ID    int    `json:"id"`
-	Name  string `json:"name" binding:"required,min=3"`
-	Email string `json:"email" binding:"required,email"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
+
+type loginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=8"`
+}
+
+type loginResponse struct {
+	Token string `json:"token"`
+}
+
+// loginUser handles user login and returns a JWT token if credentials are valid.
+//
+//	@Summary		Login User
+//	@Description	Authenticates a user using email and password, and returns a JWT token on success.
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		loginRequest	true	"Login credentials"
+//	@Success		200		{object}	loginResponse
+//	@Failure		400		{object}	gin.H	"Bad Request - invalid input"
+//	@Failure		401		{object}	gin.H	"Unauthorized - invalid credentials"
+//	@Failure		500		{object}	gin.H	"Internal Server Error"
+//	@Router			/auth/login [post]
+//
+//	@Security		BearerAuth
+func (app *application) loginUser(c *gin.Context) {
+	var payload loginRequest
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	user, err := app.store.Users.GetUserByEmail(c.Request.Context(), payload.Email)
+	if err != nil {
+		if errors.Is(err, storage.ErrUserNotFound) {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid email or password"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to retrieve user"})
+	}
+
+	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(payload.Password)); err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid email or password"})
+		return
+	}
+
+	claims := jwt.MapClaims{
+		"sub": user.ID,
+		"exp": time.Now().Add(app.config.authConfig.tokenExp).Unix(),
+		"iat": time.Now().Unix(),
+		"nbf": time.Now().Unix(),
+		"iss": app.config.authConfig.iss,
+		"aud": app.config.authConfig.aud,
+	}
+
+	token, err := app.JWTAuthenticator.GenerateToken(claims)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to generate token"})
+		return
+	}
+
+	c.JSON(http.StatusOK, loginResponse{Token: token})
 }
 
 // RegisterUser godoc
@@ -28,15 +94,15 @@ type UserResponse struct {
 //	@Tags			Users
 //	@Accept			json
 //	@Produce		json
-//	@Param			payload	body		RegisterUserRequest	true	"User payload"
-//	@Success		200		{object}	storage.User
+//	@Param			payload	body		registerUserRequest	true	"User payload"
+//	@Success		200		{object}	userResponse
 //	@Failure		400		{object}	error
 //	@Failure		404		{object}	error
 //	@Failure		500		{object}	error
 //	@Router			/auth/register [post]
 func (app *application) registerUser(c *gin.Context) {
 
-	var payload RegisterUserRequest
+	var payload registerUserRequest
 	if err := c.ShouldBindJSON(&payload); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -59,7 +125,7 @@ func (app *application) registerUser(c *gin.Context) {
 		return
 	}
 
-	response := UserResponse{
+	response := userResponse{
 		ID:    user.ID,
 		Name:  user.Name,
 		Email: user.Email,
@@ -94,7 +160,7 @@ func (app *application) getUserById(c *gin.Context) {
 		return
 	}
 
-	response := UserResponse{
+	response := userResponse{
 		ID:    user.ID,
 		Name:  user.Name,
 		Email: user.Email,
