# cmd/api/routes.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"expvar"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -15,19 +16,17 @@ func (app *application) routes() http.Handler {
 
 	v1 := g.Group("/api/v1")
 	{
-		v1.GET("/health", func(c *gin.Context) {
-			c.String(http.StatusOK, "OK", "env", app.config.env, "message", "Health check successful")
-		})
+		basicAuth := v1.Group("/")
+		basicAuth.Use(app.BasicAuthMiddleware())
+		{
+			basicAuth.GET("/debug/vars", gin.WrapH(app.expvars(expvar.Handler())))
+			basicAuth.GET("/health", app.healthCheck)
+		}
 
 		events := v1.Group("/events")
 		{
-			events.POST("/", app.createEvent)
 			events.GET("/", app.getAllEvents)
 			events.GET("/:id", app.getEventById)
-			events.PUT("/:id", app.updateEvent)
-			events.DELETE("/:id", app.deleteEvent)
-			events.POST("/:id/attendees/:userId", app.addAttendeeToEvent)
-			events.DELETE("/:id/attendees/:userId", app.deleteAttendeeFromEvent)
 			events.GET("/:id/attendees", app.getEventAttendees)
 		}
 
@@ -35,11 +34,22 @@ func (app *application) routes() http.Handler {
 		{
 			users.POST("/register", app.registerUser)
 			users.GET("/:id", app.getUserById)
+			users.POST("/login", app.loginUser)
 		}
 
 		attendees := v1.Group("/attendees")
 		{
 			attendees.GET("/:userId/events", app.getEventsOfAttendee)
+		}
+
+		authGroup := v1.Group("/")
+		authGroup.Use(app.AuthMiddleware())
+		{
+			authGroup.POST("/events", app.createEvent)
+			authGroup.Use(app.eventContextMiddleWare()).PUT("/events/:id", app.updateEvent)
+			authGroup.Use(app.eventContextMiddleWare()).DELETE("/events/:id", app.deleteEvent)
+			authGroup.Use(app.eventContextMiddleWare()).POST("/events/:id/attendees/:userId", app.addAttendeeToEvent)
+			authGroup.Use(app.eventContextMiddleWare()).DELETE("/events/:id/attendees/:userId", app.deleteAttendeeFromEvent)
 		}
 	}
 
